--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 <div id="buttons">
     <button type="button" onclick="asynchronousMessage()">画面を開く</button>
 </div>
+<div id="text">
+    
+</div>
 </body>
 </html>
