--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Electron Read Us</title>
+<title>SyncPDF</title>
 </head>
 
 <script src="renderer.js"></script>
 
-<body>
-<h1>Hello, electron!</h1>
-<div id="buttons">
-    <button type="button" onclick="asynchronousMessage()">画面を開く</button>
-</div>
-<div id="text">
-    
-</div>
+<body margin: 0;>
+<webview id="authview" autosize="on" src="data:text/plain"/>
 </body>
 </html>
