--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
 <head>
 <meta charset="UTF-8">
 <title>SyncPDF</title>
+<link rel="stylesheet" type="text/css" href="./mdl/material.min.css" media="all">
+<link rel="stylesheet" type="text/css" href="./mdl/icon.css" media="all">
 </head>
 
+<script src="./mdl/material.min.js"></script>
 <script src="renderer.js"></script>
 
-<body margin: 0;>
+
+<body>
+
+<!-- Square card -->
+<style>
+.demo-card-square {
+    width: 450px;
+    height: 100px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+.demo-card-square > .mdl-card__title {
+    color: #fff;
+    background: #46B6AC;
+}
+</style>
+
+<div class="demo-card-square mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title mdl-card--expand">
+    <h2 class="mdl-card__title-text">
+        Get connected to Google Drive.
+    </h2>
+  </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Get Started
+    </button>
+  </div>
+</div>
+
 <webview id="authview" autosize="on" src="data:text/plain"/>
 </body>
 </html>
