ボタン押下時にWebViewをロードするように修正

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </h2>
   </div>
   <div class="mdl-card__actions mdl-card--border">
-    <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+    <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
+      onclick="authorize();">
       Get Started
     </button>
   </div>
